# C-DSA-Template

./: .tmuxp.yaml  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c
src/lib/: CMakeLists.txt  template.c
src/lib/includes/: template.h
tests/: CMakeLists.txt  test_template.c
